--- a/src/app/pages/carreras-listar/carreras-listar.component.html
+++ b/src/app/pages/carreras-listar/carreras-listar.component.html
@@ -1,3 +1,12 @@
+<h1>Carreras</h1>
+
+<div class="form-floating mb-3">
+    <input type="text" class="form-contol" placeholder="Buscar Carrera"
+    (keyup)="searchCarreras()" [(ngModel)]="buscarCarrera" />
+
+</div>
+
+
 <table class="table">
     <thead>
         <tr>
